# miningcore-ubuntu24-mflex-webui

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  build-debian-11.sh  build-debian-12.sh  build-ubuntu-20.04.sh  build-ubuntu-21.04.sh  build-ubuntu-22.04.sh  build-ubuntu-24.04.sh  build-windows.bat
.github/workflows/: dotnet.yml
contrib/install/: install-ubuntu-24.04.sh  install-webui-static.sh  miningcore.service  multiflexd.service
contrib/install/webui/: index.html
docs/: ubuntu-24.04-bare-metal.md
examples/: handshake_pool.json  multiflex_pool.json
src/Miningcore/: AutofacModule.cs  Miningcore.csproj  Program.cs  build-libs-linux.sh  coins.json
src/Miningcore.Tests/: Miningcore.Tests.csproj  ModuleInitializer.cs
src/Miningcore.Tests/Crypto/: HashingTests.cs
src/Miningcore.Tests/Persistence/Postgres/: PostgresVersionTests.cs
src/Miningcore/Api/Controllers/: PoolApiController.cs
src/Miningcore/Api/Responses/: GetMinerStatsResponse.cs  GetPoolsResponse.cs  LiveStatsResponse.cs
src/Miningcore/Blockchain/Bitcoin/: BitcoinJob.cs  BitcoinJobManager.cs  (+1 more)
src/Miningcore/Configuration/: ClusterConfig.cs  ClusterConfigExtensions.cs
src/Miningcore/Native/: Multihash.cs
src/Miningcore/Payments/: PayoutManager.cs
src/Miningcore/Stratum/: IWorkerConnectionTracker.cs  StratumConnection.cs  StratumServer.cs  WorkerConnectionInfo.cs  WorkerConnectionTracker.cs
src/Native/libmultihash/: Makefile  exports.cpp  libmultihash.vcxproj  xelisv2.c
src/Native/libxelishashv3/: CMakeLists.txt  xelis_hash_v2.c  xelishashv3_wrapper.c
(+22 files in other folders)
